<resources>
    <string name="app_name">iBuy</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to AnuragDesai_Library</string>
    <string name="goChechkOut_btn">Check Out</string>
    <string name="goDoQuery_btn">Do Query</string>
    <string name="title_query">Query</string>
    <string name="query_prompt">Choose a Query</string>
    <string name="showresult_btn">Show Result</string>
    <string name="goBack_btn">Back to Main Page</string>
    <string name="title_checkout"><![CDATA[Check Out & Return]]></string>
    <string name="studentID">Student ID</string>
    <string name="bookID">Book ID</string>
    <string name="date">Date</string>
    <string name="checkout_btn">Check Out</string>
    <string name="return_btn">Return</string>
    <string name="Summary">summary_btn</string>
    <string name="summary_btn">Summary</string>
    <string name="checkoutlist_btn">Show Checkout List</string>
    <string name="title_checkoutlist">Check Out Record</string>
    <string name="stname">Name</string>
    <string name="coreduedate">Due Date</string>
    <string name="lbtitle">Book Title</string>

    <string-array name="query_array">
        <item>Books</item>
        <item>Smart Phone</item>
        <item>Car</item>
        <item>Furniture</item>
    </string-array>

    <string name="login">Log In</string>
    <string name="sell_post">New Post</string>
    <string name="sell_title">Title:</string>
    <string name="sell_category">Category:</string>
    <string name="sell_desc">Description:</string>
    <string name="to_mainpage">Go Back to Main Page</string>
    <string name="next">Next</string>
    <string name="post">Post</string>
    <string name="error_title">Please Enter Title</string>
    <string name="error_category">Please Enter Category</string>
    <string name="error_desc">Please Enter Description</string>
    <string name="st_name">Student Name</string>
    <string name="post_title">Post Title</string>
    <string name="post_desc">Post Description</string>


    <string name="seller_name">Seller Name</string>
    <string name="goback">Go Back</string>
    <string name="add_wishlist">Add to Wishlist</string>

    <string name="enter_name">Enter Name</string>
    <string name="add_record">Add Record</string>
    <string name="export_records">Export To Excel</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>
    <string name="empty_list_text">No records found</string>
    <string name="enter_desc">Note</string>
    <string name="enter_title">Title</string>
    <string name="title_activity_post_page">post_page</string>






    <string name="Profile">profile</string>
    <string name="prompt_email_msg">Please Enter Your Email</string>
    <string name="Submit">submit</string>
    <string name="one">Chandan</string>


</resources>
