<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QueryActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_query"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp" />

    <Spinner
        android:layout_width="270dp"
        android:layout_height="55dp"
        android:id="@+id/querylist_spinner"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:prompt="@string/query_prompt"
        android:entries="@array/query_array"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/showresult_btn"
        android:id="@+id/showresult_btn"
        android:layout_gravity="right"
        android:layout_marginRight="26dp"
        android:layout_marginTop="10dp"
        android:onClick="onClick" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="261dp"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal"
        android:background="#000000" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/checkoutlist_btn"
        android:id="@+id/showcheckoutlist_btn"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/goBack_btn"
        android:id="@+id/goBack_btn"
        android:layout_gravity="center_horizontal" />
</LinearLayout>