<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:id="@+id/textView"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goChechkOut_btn"
            android:id="@+id/goCheckOut_btn"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_marginTop="80dp"
            android:width="200dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goDoQuery_btn"
            android:id="@+id/goDoQuery_btn"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_marginTop="100dp"
            android:width="200dp" />
    </LinearLayout>
</LinearLayout>
