<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#E0E0E0"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="50sp"
        android:focusable="false"
        android:paddingTop="50dp"
        android:gravity="center_horizontal" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userName"
        android:layout_gravity="center_horizontal"
        android:hint="@string/prompt_username"
        android:inputType="textEmailAddress"
        android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/userPass"
        android:layout_gravity="center_horizontal"
        android:hint="@string/prompt_password"
        android:inputType="numberPassword" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <android.support.v7.widget.AppCompatButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="10dp"
            android:text="@string/login"
            android:id="@+id/login_button"
            android:onClick="onClick"
            android:baselineAligned="false"
            android:orientation="vertical" />

    </LinearLayout>

</LinearLayout>