<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sell"
    android:background="#E0E0E0">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sell_post"
        android:id="@+id/textView"
        android:layout_gravity="top|left"
        android:textSize="40sp"
        android:textIsSelectable="false" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText1"
            android:hint="@string/sell_title"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText3"
            android:hint="@string/sell_desc"
            android:inputType="textMultiLine"
            android:minLines="5"
            android:gravity="top|left" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Item"
            android:id="@+id/button2"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:onClick="onClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_mainpage"
            android:id="@+id/back"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:onClick="onClick" />
    </RelativeLayout>

</LinearLayout>