<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".post_page">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="9">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/post_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_title"
                android:textSize="25sp"
                android:text="Title :" />
            <TextView
                android:id="@+id/post_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:background="#efebe9" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Seller&apos;s Name :"
                android:id="@+id/st_first_name_text"
                android:textSize="25sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/st_first_name"
                android:textSize="25sp"
                android:background="#efebe9" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/post_desc_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_desc"
                android:textSize="25sp"
                android:text="Post Description :" />
            <TextView
                android:id="@+id/post_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_weight="9"
                android:background="#efebe9"
                android:textIsSelectable="false">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/itemlistView" />
        </LinearLayout>

    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/goback_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/goback"
                android:layout_weight="1"
                android:onClick="onClick" />
            <Button
                android:id="@+id/add_wishlist"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/add_wishlist"
                android:layout_weight="1"
                android:onClick="onClick" />


        </LinearLayout>


</LinearLayout>